momentjs date picker

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,7 +30,14 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
+
+
+
+
+
     <div class="container">
+
       <!-- Timeblocks go here -->
       <table class="table table-bordered">
         
@@ -85,8 +93,8 @@
       </table>
 
     </div>
-
+<script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
   </body>
 </html>
