debug momentjs function

--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
     </header>
 
 
-
-
-
-
     <div class="container">
 
       <!-- Timeblocks go here -->
@@ -93,7 +89,8 @@
       </table>
 
     </div>
-<script src="script.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+      <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
   </body>
