--- a/index.html
+++ b/index.html
@@ -117,12 +117,11 @@
           <tr class="time-block">
             <td class="hour">5PM</td>
             <td class="text-field">
-              <input type="text" class="description" id="hour5" />
+              <input type="text" class="description" id="hour4" />
             </td>
+
             <td>
-              <button class="btn saveBtn" class="description">
-                <i class="fas fa-save"></i>
-              </button>
+              <button class="btn saveBtn"><i class="fas fa-save"></i></button>
             </td>
           </tr>
         </tbody>
